resource/manifests/disco-cloud-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disco-cloud-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disco-cloud
  template:
    metadata:
      labels:
        app: disco-cloud
    spec:
      containers:
        - name: disco-cloud-container
          image: ecno20/disco-cloud-service:1.0.0
          ports:
            - containerPort: 8080
