resource/manifests/disco-cloud-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-disco-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.nuup.ninja
      http:
        paths:
          - path: /disco-cloud
            pathType: Prefix
            backend:
              service:
                name: cloud-rest-service
                port:
                  number: 8080
